2008-09-25  Marek Kasik  <mkasik@redhat.com>

	Bug 553241 – double freed pointer in lpr_write cause firefox3 crash

	* modules/printbackends/lpr/gtkprintbackendlpr.c:
	The redundant freeing of memory was removed.

	Patch by Chris Wang

2008-09-25  Michael Natterer  <mitch@imendio.com>

	Merged from trunk:

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_finalize):
	don't unref the file system backend, the newly added
	unset_file_system_backend() already does this (bug #553135).

2008-09-24  Tor Lillqvist  <tml@novell.com>

	* gtk-zip.sh.in: Include all of share/man, lib/pkgconfig,
	share/aclocal and share/gtk-doc instead of trying to list
	individual files or subdirectories. We had missed gail.pc, for
	instance.

2008-09-23  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.14.3 ===

	* gtk/tests/builder.c: Fix the spinbutton test to use page_size 0.

2008-09-23  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-09-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkspinbutton.c: Warn if the adjustment has nonzero page size.

	* README.in: Update to explain the situation.

	* gtk/gtkadjustment.c: Revert to the old behaviour of allowing
	values in the range [lower, upper]. Relying on the possibility
	to set values in the [upper - page_size, upper] subrange is
	considered deprecated, though, and will trigger a warning.

	* gtk/gtkcombobox.c:
	* gtk/gtkiconview.c:
	* gtk/gtkrange.c:
	* gtk/gtkscrolledwindow.c:
	* gtk/gtktreeview.c: Add the CLAMPing back that was removed after
	the GtkAdjustment behaviour change.

2008-09-22  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 553135 – eog crash: assertion failed. Gtk error:
	shortcuts_remove_rows: code should not be reached

	* gtk/gtkfilechooserdefault.c: Disconnect from GtkFileSystem
	signals when we are destroyed, in order to avoid nasty surprises.
	Patch by Claudio Saavedra

2008-09-22  Frederic Crozat  <fcrozat@mandriva.com>
