@@ -1,3 +1,13 @@
+2008-09-26  Matthias Clasen  <mclasen@redhat.com>
+
+	Merged from trunk:
+
+	Bug 553133 – GtkFileChooser won't ask to mount a volume
+
+	* gtk/gtkfilechooserdefault.c (shortcuts_activate_volume): Use
+	a GtkMountOperation when mounting, so that we get a password
+	dialog when required.
+
 2008-09-25  Marek Kasik  <mkasik@redhat.com>
 
 	Bug 553241 – double freed pointer in lpr_write cause firefox3 crash
